[package]
name = 'iptooled'
version = '0.1.0'

edition = '2018'

repository = 'https://github.com/charmander/iptooled'

[dependencies.tokio]
version = '0.2.4'
features = [
	'io-util',
	'rt-core',
	'rt-util',
	'uds',
]

[dev-dependencies]
quickcheck = '0.9.0'
quickcheck_macros = '0.8.0'
rand = '0.7.2'
rand_distr = '0.2.2'
